Fixes ticket DT-1048, single line forms appearing too short on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1652,4 +1652,12 @@ input[type="search"]::-webkit-search-decoration {
 			padding: 6px 14px 8px 40px;
 		}
 	}
+	.widget.profile form fieldset input,
+	input[type=email],
+	input[type=text],
+	input[type=search],
+	.signupform fieldset input {
+		width: 100%;
+		margin-bottom: 10px;
+	}
 }
